[gd_scene load_steps=5 format=3 uid="uid://c8f4uy3x4vv50"]

[ext_resource type="Script" uid="uid://yw4f4aeowaf5" path="res://title_screen.gd" id="1_ak2if"]
[ext_resource type="PackedScene" uid="uid://dtsj8ctc8puh7" path="res://save_load_window.tscn" id="3_ig5kc"]

[sub_resource type="Gradient" id="Gradient_ak2if"]
offsets = PackedFloat32Array(0, 0.99333334, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ig5kc"]
gradient = SubResource("Gradient_ak2if")

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ak2if")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ig5kc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 451.0
offset_top = 411.0
offset_right = -451.0
offset_bottom = -411.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center][wave amp=20 freq=0.5]Pluse Shape[/wave][/center]"
fit_content = true

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "continue"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[node name="SaveLoadWindow" parent="." instance=ExtResource("3_ig5kc")]

[node name="SonerTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_button_quit_pressed"]
[connection signal="timeout" from="SonerTimer" to="." method="_on_soner_timer_timeout"]
